Fixes issue #16772: int() constructor second argument (base) must be an int. Consistent with the behavior in Python 2.